--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -270,6 +270,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.getcwd()\n",
+    "os.chdir(\"..\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "packages = [\n",
+    "    \"transformers\", \"timm\", \"orjson\", \"opencv_python_headless\", \"datasets\", \"lightning\",\n",
+    "    \"nltk\", \"Levenshtein\", \"sentencepiece\", \"sconf\", \"albumentations\", \"pypdf\", \"pypdfium2\",\n",
+    "    \"fastapi\", \"uvicorn\", \"multipart\", \"pytesseract\", \"bs4\", \"sklearn\", \"Pebble\", \"pylatexenc\",\n",
+    "    \"fuzzysearch\", \"unidecode\", \"htmlmin\", \"pdfminer\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('requirements.txt', 'w') as f:\n",
+    "    for package in packages:\n",
+    "        f.write(f\"{package}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -337,20 +373,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
-    "# Read the JSON file\n",
-    "with open(r\"D:\\Data\\texify_bench.json\\bench_data.json\", 'r') as json_file:\n",
-    "    data = json.load(json_file)\n",
+    "# # Read the JSON file\n",
+    "# with open(r\"D:\\Data\\texify_bench.json\\bench_data.json\", 'r') as json_file:\n",
+    "#     data = json.load(json_file)\n",
     "\n",
-    "# Write to the JSONL file\n",
-    "with open('output.jsonl', 'w') as jsonl_file:\n",
-    "    for entry in data:\n",
-    "        jsonl_file.write(json.dumps(entry) + '\\n')"
+    "# # Write to the JSONL file\n",
+    "# with open('output.jsonl', 'w') as jsonl_file:\n",
+    "#     for entry in data:\n",
+    "#         jsonl_file.write(json.dumps(entry) + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = 'test/data/train.jsonl'\n",
+    "\n",
+    "with open(file_path, 'r') as f:\n",
+    "    for i, line in enumerate(f):\n",
+    "        try:\n",
+    "            json_obj = json.loads(line)\n",
+    "            # Process the JSON object as needed\n",
+    "        except json.JSONDecodeError as e:\n",
+    "            print(f\"Skipping line {i} due to error: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d:\\\\FPT\\\\math-ocr\\\\nougat\\\\test\\\\data'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.chdir('data')\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import base64\n",
+    "import os\n",
+    "import json\n",
+    "\n",
+    "def save_base64_image(base64_str, output_dir, filename):\n",
+    "    img_data = base64.b64decode(base64_str)\n",
+    "    file_path = os.path.join(output_dir, filename)\n",
+    "    with open(file_path, 'wb') as f:\n",
+    "        f.write(img_data)\n",
+    "    return file_path\n",
+    "\n",
+    "def process_jsonl_file(input_file, output_dir):\n",
+    "    output_file = input_file.replace('0.jsonl', '.jsonl')\n",
+    "    with open(input_file, 'r') as f_in, open(output_file, 'w') as f_out:\n",
+    "        for i, line in enumerate(f_in):\n",
+    "            try:\n",
+    "                json_obj = json.loads(line)\n",
+    "                if 'image' in json_obj:\n",
+    "                    base64_str = json_obj['image']\n",
+    "                    filename = f'image_{i}.png'\n",
+    "                    file_path = save_base64_image(base64_str, output_dir, filename)\n",
+    "                    file_path = file_path.replace('arxiv\\\\', '')\n",
+    "                    json_obj['image'] = file_path\n",
+    "                f_out.write(json.dumps(json_obj) + '\\n')\n",
+    "            except json.JSONDecodeError as e:\n",
+    "                print(f\"Skipping line {i} due to error: {e}\")\n",
+    "\n",
+    "# Define the directories and files\n",
+    "output_dir = 'arxiv'\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "\n",
+    "train_file = 'train0.jsonl'\n",
+    "validation_file = 'validation0.jsonl'\n",
+    "test_file = 'test0.jsonl'\n",
+    "\n",
+    "# Process the files\n",
+    "process_jsonl_file(train_file, output_dir)\n",
+    "process_jsonl_file(validation_file, output_dir)\n",
+    "process_jsonl_file(test_file, output_dir)"
    ]
   }
  ],
