--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -474,6 +474,129 @@
     "process_jsonl_file(validation_file, output_dir)\n",
     "process_jsonl_file(test_file, output_dir)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D:\\\\Data\\\\vietnamese_ocr_data'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.chdir(r'D:\\Data\\vietnamese_ocr_data')\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "import json\n",
+    "import os\n",
+    "import random\n",
+    "\n",
+    "def combine_images_and_text(equation_image_dir, text_image_dir, output_dir, jsonl_file):\n",
+    "\n",
+    "    data = []\n",
+    "\n",
+    "    equation_image_files = sorted([f for f in os.listdir(equation_image_dir) if f.lower().endswith(('.png', '.jpg', '.jpeg', '.gif', '.bmp'))])  # Add other image extensions if needed\n",
+    "    text_image_files = sorted([f for f in os.listdir(text_image_dir) if f.lower().endswith(('.png', '.jpg', '.jpeg', '.gif', '.bmp'))])\n",
+    "\n",
+    "    num_pairs = min(len(equation_image_files), len(text_image_files))\n",
+    "\n",
+    "    for i in range(num_pairs):\n",
+    "        eq_img_path = os.path.join(equation_image_dir, equation_image_files[i])\n",
+    "        text_img_path = os.path.join(text_image_dir, text_image_files[i])\n",
+    "\n",
+    "        try:\n",
+    "            eq_img = Image.open(eq_img_path)\n",
+    "            text_img = Image.open(text_img_path)\n",
+    "\n",
+    "            # Extract corresponding text filenames (assuming same base name as image)\n",
+    "            eq_text_file = os.path.splitext(equation_image_files[i])[0] + \".gt.txt\"  # Assumes .txt extension\n",
+    "            text_text_file = os.path.splitext(text_image_files[i])[0] + \".txt\"\n",
+    "\n",
+    "            # Read text from individual files\n",
+    "            with open(os.path.join(equation_image_dir, eq_text_file), 'r', encoding='utf-8') as f:\n",
+    "                equation_text = f.read().strip()  # Read and remove extra whitespace\n",
+    "            with open(os.path.join(text_image_dir, text_text_file), 'r', encoding='utf-8') as f:\n",
+    "                text = f.read().strip()\n",
+    "\n",
+    "\n",
+    "             # Left-Right Combination\n",
+    "            combined_img_lr = Image.new('RGB', (eq_img.width + text_img.width, max(eq_img.height, text_img.height)), color='white')\n",
+    "\n",
+    "            # Top-Bottom Combination\n",
+    "            combined_img_tb = Image.new('RGB', (max(eq_img.width, text_img.width), eq_img.height + text_img.height), color='white')\n",
+    "\n",
+    "            if random.choice([True, False]):\n",
+    "                combined_img_lr.paste(eq_img, (0, 0))\n",
+    "                combined_img_lr.paste(text_img, (eq_img.width, 0))\n",
+    "                combined_text_lr = equation_text + \" \" + text\n",
+    "            else:\n",
+    "                combined_img_lr.paste(text_img, (0, 0))\n",
+    "                combined_img_lr.paste(eq_img, (text_img.width, 0))\n",
+    "                combined_text_lr = text + \" \" + equation_text\n",
+    "\n",
+    "            if random.choice([True, False]):\n",
+    "                combined_img_tb.paste(text_img, (0, 0))\n",
+    "                combined_img_tb.paste(eq_img, (0, text_img.height))\n",
+    "                combined_text_tb = text + \"\\n\" + equation_text\n",
+    "            else:\n",
+    "                combined_img_tb.paste(eq_img, (0, 0))\n",
+    "                combined_img_tb.paste(text_img, (0, eq_img.height))\n",
+    "                combined_text_tb = equation_text + \"\\n\" + text\n",
+    "\n",
+    "\n",
+    "            # Save combined images and data\n",
+    "            combined_lr_path = os.path.join(output_dir, f\"combined_lr_{i}.png\")\n",
+    "            combined_tb_path = os.path.join(output_dir, f\"combined_tb_{i}.png\")\n",
+    "            combined_img_lr.save(combined_lr_path)\n",
+    "            combined_img_tb.save(combined_tb_path)\n",
+    "\n",
+    "            data.append({\"image\": combined_lr_path, \"equation\": combined_text_lr})\n",
+    "            data.append({\"image\": combined_tb_path, \"equation\": combined_text_tb})\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "        except FileNotFoundError:\n",
+    "            print(f\"Text file not found for image {i}. Skipping.\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error processing images {i}: {e}\")\n",
+    "\n",
+    "\n",
+    "    # Save JSONL\n",
+    "    os.makedirs(output_dir, exist_ok=True)\n",
+    "    with open(os.path.join(output_dir, jsonl_file), 'w', encoding='utf-8') as jsonl_f:\n",
+    "        for item in data:\n",
+    "            jsonl_f.write(json.dumps(item) + '\\n')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Example usage (replace with your actual paths):\n",
+    "equation_image_dir = r\"D:\\Data\\IM2LATEX-100K\\train\"\n",
+    "text_image_dir = r\"D:\\Data\\vietnamese_ocr_data\\InkData_line_processed\"\n",
+    "output_dir = \"combined_output\"\n",
+    "jsonl_file = \"combined_data.jsonl\"\n",
+    "\n",
+    "\n",
+    "combine_images_and_text(equation_image_dir, text_image_dir, output_dir, jsonl_file)"
+   ]
   }
  ],
  "metadata": {
