--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -512,7 +512,7 @@
     "\n",
     "    data = []\n",
     "\n",
-    "    equation_image_files = sorted([f for f in os.listdir(equation_image_dir) if f.lower().endswith(('.png', '.jpg', '.jpeg', '.gif', '.bmp'))])  # Add other image extensions if needed\n",
+    "    equation_image_files = sorted([f for f in os.listdir(equation_image_dir) if f.lower().endswith(('.png', '.jpg', '.jpeg', '.gif', '.bmp'))])\n",
     "    text_image_files = sorted([f for f in os.listdir(text_image_dir) if f.lower().endswith(('.png', '.jpg', '.jpeg', '.gif', '.bmp'))])\n",
     "\n",
     "    num_pairs = min(len(equation_image_files), len(text_image_files))\n",
@@ -525,13 +525,11 @@
     "            eq_img = Image.open(eq_img_path)\n",
     "            text_img = Image.open(text_img_path)\n",
     "\n",
-    "            # Extract corresponding text filenames (assuming same base name as image)\n",
-    "            eq_text_file = os.path.splitext(equation_image_files[i])[0] + \".gt.txt\"  # Assumes .txt extension\n",
+    "            eq_text_file = os.path.splitext(equation_image_files[i])[0] + \".gt.txt\"\n",
     "            text_text_file = os.path.splitext(text_image_files[i])[0] + \".txt\"\n",
     "\n",
-    "            # Read text from individual files\n",
     "            with open(os.path.join(equation_image_dir, eq_text_file), 'r', encoding='utf-8') as f:\n",
-    "                equation_text = f.read().strip()  # Read and remove extra whitespace\n",
+    "                equation_text = f.read().strip() \n",
     "            with open(os.path.join(text_image_dir, text_text_file), 'r', encoding='utf-8') as f:\n",
     "                text = f.read().strip()\n",
     "\n",
@@ -560,8 +558,6 @@
     "                combined_img_tb.paste(text_img, (0, eq_img.height))\n",
     "                combined_text_tb = equation_text + \"\\n\" + text\n",
     "\n",
-    "\n",
-    "            # Save combined images and data\n",
     "            combined_lr_path = os.path.join(output_dir, f\"combined_lr_{i}.png\")\n",
     "            combined_tb_path = os.path.join(output_dir, f\"combined_tb_{i}.png\")\n",
     "            combined_img_lr.save(combined_lr_path)\n",
@@ -586,9 +582,6 @@
     "            jsonl_f.write(json.dumps(item) + '\\n')\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "# Example usage (replace with your actual paths):\n",
     "equation_image_dir = r\"D:\\Data\\IM2LATEX-100K\\train\"\n",
     "text_image_dir = r\"D:\\Data\\vietnamese_ocr_data\\InkData_line_processed\"\n",
     "output_dir = \"combined_output\"\n",
